sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:6: error: not found: value getNombreesValeur
  var long = getNombreesValeur()
             ^